[package]
name = "tms-api-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
convert_case = "0.6.0"
env_logger = "0.11.6"
log = "0.4.22"
reqwest = { version = "0.11.22", features = [
    "json",
    "blocking",
    "rustls-tls",
    "gzip",
] }
sea-orm = { version = "1.1.3", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "with-chrono",
    "with-rust_decimal",
] }
dotenv = "0.15.0"
config = "0.15.4"
serde = { version = "1.0.216", features = ["derive"] }
